<resources>
    <string name="app_name">Quizza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_home">Home</string>
    <string name="general">General</string>
    <string name="display">Display</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="brightness_level">Brightness Level</string>
    <string name="value_percentage">0 %</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="change_wallpaper">Change Wallpaper</string>
    <string name="device_theme">Device Theme</string>
    <string name="automatic">Automatic</string>
    <string name="alerts">Alerts</string>
    <string name="about_us_header">About Us</string>
    <string name="about_us_description">This quiz application named quizza was developed by Badal Singh. We strive to provide high-quality educational content to our users. If you have any feedback or suggestions, please contact us.</string>

    <string-array name="list_entries">
        <item>Gk</item>
        <item>Current Affair</item>
        <item>Science</item>
    </string-array>
    <string-array name="list_values">
        <item>GK</item>
        <item>Current Affair</item>
        <item>Science</item>
    </string-array>
    <string name="list_preference_title">Select Preference Category</string>
    <string name="list_preference_summary">List of Category</string>
    <string name="privacy_policy">
Information Collection and Use\n\n
Quizza may collect personal identification information from users in various ways, including, but not limited to, when users visit our application, register on the application, and in connection with other activities, services, features or resources we make available on our application. Users may be asked for, as appropriate, name, email address.  We will collect personal identification information from users only if they voluntarily submit such information to us. Users can always refuse to supply personally identification information, except that it may prevent them from engaging in certain application related activities.\n\n

Non-personal Identification Information\n\n

We may collect non-personal identification information about users whenever they interact with our application. Non-personal identification information may include the browser name, the type of computer and technical information about "user\'s means of connection to our application, such as the operating system and the Internet service providers utilized and other similar information.\n\n

Web Browser Cookies\n\n

"Quizza may use "cookies" to enhance user experience. "User's web browser places cookies on their hard drive for record-keeping purposes and sometimes to track information about them. Users may choose to set their web browser to refuse cookies or to alert you when cookies are being sent. If they do so, note that some parts of the application may not function properly."\n\n

How We Use Collected Information\n\n

"Quizza Application may collect and use user's personal information for the following purposes:"\n\n

    To personalize user experience\n
    We may use information in the aggregate to understand how our users as a group use the services and resources provided on our application.\n\n

    To improve our application\n
    We continually strive to improve our application offerings based on the information and feedback we receive from you.\n\n

    To improve customer service\n
    Your information helps us to more effectively respond to your customer service requests and support needs.\n\n


Sharing Your Personal Information\n\n

"We do not sell, trade, or rent user's personal identification information to others. We may share generic aggregated demographic information not linked to any personal identification information regarding visitors and users with our business partners, trusted affiliates, and advertisers for the purposes outlined above."\n\n

Changes to this Privacy Policy\n\n

Quizza  has the discretion to update this Privacy Policy at any time. We encourage users to frequently check this page for any changes to stay informed about how we are helping to protect the personal information we collect. You acknowledge and agree that it is your responsibility to review this Privacy Policy periodically and become aware of modifications.\n\n


Your Acceptance of These Terms\n\n

By using  Quizza, you signify your acceptance of this policy. If you do not agree to this policy, please do not use our application. Your continued use of the application following the posting of changes to this policy will be deemed your acceptance of those changes.\n\n

Contacting Us\n\n

If you have any questions about this Privacy Policy, the practices of this application, or your dealings with this application, please contact us."
</string>


</resources>